Fix spacing and responsiveness of Navbar and Footer

--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -4,11 +4,12 @@ footer {
     top: 0;
     right: 0;
     bottom: 0;
-    width: 15%;
-    padding: 0.5em;
+    width: 10%;
+    font-size: 1.5vw;
 
     p {
         position: absolute;
-        bottom: 0.5em;
+        bottom: 0;
+        padding: 0.2rem 1.5vw;
     }
 }
