--- a/assets/styles/nav.scss
+++ b/assets/styles/nav.scss
@@ -4,18 +4,18 @@ nav {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 10%;
+    font-size: 2vw;
 
     ul {
         display: flex;
         flex-direction: column;
         list-style-type: none;
         margin: 0;
-        padding: 2em;
+        padding: 1rem;
         align-items: center;
 
         li {
-            margin: 0.5em;
+            margin: 0.5em 0;
 
             a {
                 color: #FFFFFF;
